refactor: update email service and configuration management
- Refactored EmailServiceImpl to utilize new MailSenderPort and EmailTemplateRendererPort interfaces for improved email handling.
- Enhanced configuration management by integrating UUID and UID fields into PlatformConfigProperty for better identification.
- Updated database schema to add UUID and UID columns to platform configuration properties.
- Improved error logging and email content formatting methods for better clarity and maintainability.
- Adjusted access control annotations in ConfigAdminGlobalPropertiesController and ConfigAdminPropertiesController for consistency.

These changes enhance the email service architecture and improve the management of configuration properties, contributing to a more robust application structure.